sampler/chain/projects/litiengine/selected.txt
/Users/nima/Developer/NullAwayFixer/Projects/litiengine/src/de/gurkenlabs/litiengine/environment/tilemap/xml/TileLayer.java:45: error: [NullAway] (INDEX= 424) (Covered) returning @Nullable expression from method with @NonNull return type
    return tile.isPresent() ? tile.get() : null;
    ^

	(see http://t.uber.com/nullaway )
/Users/nima/Developer/NullAwayFixer/Projects/litiengine/src/de/gurkenlabs/litiengine/gui/DropdownListField.java:102: error: [NullAway] (INDEX= 377) (Covered) passing @Nullable parameter 'null' where @NonNull is required
    this.chosenElementComponent = new ImageComponent(this.getX(), this.getY(), this.getWidth(), this.getHeight() / this.getNumberOfShownElements(), this.getEntrySprite(), "", null);
                                                                                                                                                                               ^

	(see http://t.uber.com/nullaway )
Users/nima/Developer/NullAwayFixer/Projects/litiengine/src/de/gurkenlabs/litiengine/sound/SoundEngine.java:719: error: [NullAway] (INDEX= 297) (Covered) assigning @Nullable expression to @NonNull field
        music = null;
              ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/util/ArrayUtilities.java:557: error: [NullAway] (INDEX= 317) (Covered) returning @Nullable expression from method with @NonNull return type
      return null;
      ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/litiengine/src/de/gurkenlabs/litiengine/gui/HorizontalSlider.java:31: error: [NullAway] (INDEX= 462) (Covered) passing @Nullable parameter 'null' where @NonNull is required
    this.setButton2(new ImageComponent(this.getX() + this.getWidth() - this.getHeight(), this.getY(), this.getHeight(), this.getHeight(), this.getButtonSpritesheet(), ARROW_RIGHT.getText(), null));
                                                                                                                                                                                              ^

	(see http://t.uber.com/nullaway )
